# rust-uinput

./: Cargo.toml  README.md
examples/: hello.rs  mouse.rs
src/: error.rs  lib.rs
src/device/: builder.rs  device.rs
src/event/: absolute.rs  controller.rs  keyboard.rs  mod.rs  relative.rs
