[package]
name = "uinput"
version = "0.1.4"
authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"
description = "Linux uinput wrapper."
repository = "https://github.com/meh/rust-uinput"
keywords = ["linux", "input"]
edition = "2021"

[dependencies]
libc = "0.2"
nix = "0.26"
uinput-sys = "0.1"
custom_derive = "0.1"
enum_derive = "0.1"

[dependencies.libudev]
optional = true
version = "0.3"

[features]
default = ["udev"]
udev = ["libudev"]
